Add path scoping
The name here could be \draw_path_scope_begin: - that might make sense
but other types of scope don't have a 'family' of commands to sit
within. Need to see how this looks in the wider scheme.

--- a/l3experimental/l3draw/l3draw.dtx
+++ b/l3experimental/l3draw/l3draw.dtx
@@ -285,11 +285,23 @@
 %   \begin{syntax}
 %     \cs{draw_scope_bb_begin:}
 %     ...
-%     \cs{draw_scope_bb_begin:}
+%     \cs{draw_scope_bb_end:}
 %   \end{syntax}
 %   Suspends (and saves) calculation of the bounding box of a drawing,
 %   resetting the tracking data and allowing the bounding box of the
 %   nested content to be calculated.
+% \end{function}
+%
+% \begin{function}{\draw_scope_path_begin:, \draw_scope_path_end:}
+%   \begin{syntax}
+%     \cs{draw_scope_path_begin:}
+%     ...
+%     \cs{draw_scope_path_end:}
+%   \end{syntax}
+%   Suspends (and saves) the current (partial) path, initialising a new
+%   path within the scope. Path operations are written to output only when
+%   used, so the scoped path is stored at the \pkg{expl3} level, not
+%   in the output.
 % \end{function}
 %
 % \subsection{Points}
