Notes on scope nesting [ci skip]

--- a/l3experimental/l3draw/l3draw.dtx
+++ b/l3experimental/l3draw/l3draw.dtx
@@ -242,8 +242,9 @@
 %
 % Scoping drawing elements is necessary to allowing nesting of subparts.
 % These features have specific use requirements: the preconditions must be
-% met.
-%
+% met. In particular, each type of drawing scope also constitutes a
+% group (\cs{groupd_being:}/\cs{group_end:} pair): as such, they must be
+% nested correctly.
 %
 % \begin{function}{\draw_scope_state_begin:, \draw_scope_state_end:}
 %   \begin{syntax}
