--- a/l3kernel/l3coffins.dtx
+++ b/l3kernel/l3coffins.dtx
@@ -684,12 +684,11 @@
 %   Special coffins: these cannot be set up earlier as they need
 %   \cs{coffin_new:N}. The empty coffin is set as a box as the full
 %   coffin-setting system needs some material which is not yet available.
-%   Debugging must be suspended as we are assigning to a constant coffin.
+%   The empty coffin is creted entirely by hand: not everything is in place
+%   yet.
 %    \begin{macrocode}
 \coffin_new:N \c_empty_coffin
-\debug_suspend:
-\hbox_set:Nn  \c_empty_coffin { }
-\debug_resume:
+\tex_setbox:D \c_empty_coffin = \tex_hbox:D { }
 \coffin_new:N \l_@@_aligned_coffin
 \coffin_new:N \l_@@_aligned_internal_coffin
 %    \end{macrocode}
