Use color stack where possible for drawing color
This pulls together 'normal' and 'drawing' color: the latter is still
documented separately as the stroke/fill split really only makes sense
there.

It's not possible to use the stack for fill color other than in
pdfTeX/LuaTeX, as the other stacks don't cover general graphics
isntructions.

At present, the dvisvgm set up is untested: a lot of that code though
likely needs further work.

--- a/l3experimental/l3draw/l3draw-state.dtx
+++ b/l3experimental/l3draw/l3draw-state.dtx
@@ -58,6 +58,10 @@
 %<@@=draw>
 %    \end{macrocode}
 %
+%    \begin{macrocode}
+\cs_generate_variant:Nn \group_insert_after:N { c }
+%    \end{macrocode}
+%
 % \begin{variable}{\g_@@_linewidth_dim, \g_@@_inner_linewidth_dim}
 %   Linewidth for strokes: global as the scope for this relies on the graphics
 %   state. The inner line width is used for places where two lines are used.
@@ -147,18 +151,21 @@
     \@@_color_aux:Vn \l_@@_color_tmp_tl {#1}
   }
 \cs_new_protected:Npn \@@_color_aux:nn #1#2
-  { \@@_color:nw {#2} #1 \q_stop }
+  {
+    \@@_color:nw {#2} #1 \q_stop
+    \group_insert_after:c { driver_draw_color_ #2 _reset: }
+  }
 \cs_generate_variant:Nn \@@_color_aux:nn { V }
 \cs_new_protected:Npn \@@_color:nw #1#2 ~ #3 \q_stop
   { \use:c { @@_color_ #2 :nw } {#1} #3 \q_stop }
 \cs_new_protected:Npn \@@_color_cmyk:nw #1#2 ~ #3 ~ #4 ~ #5 \q_stop
-  { \use:c { driver_draw_ #1 _cmyk:nnnn } {#2} {#3} {#4} {#5} }
+  { \use:c { driver_draw_color_ #1 _cmyk:nnnn } {#2} {#3} {#4} {#5} }
 \cs_new_protected:Npn \@@_color_gray:nw #1#2 \q_stop
-  { \use:c { driver_draw_ #1 _gray:n } {#2} }
+  { \use:c { driver_draw_color_ #1 _gray:n } {#2} }
 \cs_new_protected:Npn \@@_color_rgb:nw #1#2 ~ #3 ~ #4 \q_stop
-  { \use:c { driver_draw_ #1 _rgb:nnn } {#2} {#3} {#4} }
+  { \use:c { driver_draw_color_ #1 _rgb:nnn } {#2} {#3} {#4} }
 \cs_new_protected:Npn \@@_color_spot:nw #1#2 ~ #3 \q_stop
-  { \use:c { driver_draw_ #1 _spot:nn } {#2} {#3} }
+  { \use:c { driver_draw_color_ #1 _spot:nn } {#2} {#3} }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
