--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -603,7 +603,7 @@
 \cs_new_protected:Npn \driver_color_rgb:nnn #1#2#3
   { \@@_color_select:n { rgb~ #1 ~ #2 ~ #3 } }
 \cs_new_protected:Npn \driver_color_spot:nn #1#2
-  { \@@_color_select:n { color~push~\c_space_tl #1 } }
+  { \@@_color_select:n { \c_space_tl #1 } }
 \cs_new_protected:Npn \@@_color_select:n #1
   {
     \tex_special:D { color~push~ #1 }
