Doc tweak [ci skip]

--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -129,7 +129,7 @@
 %   \end{syntax}
 %   Sets the color to the CMYK values specified, all of which are
 %   fp denotations in the range $0$ and $1$. For drawing colors, see
-%   \cs{driver_draw_color_cmyk:nnnn}, \emph{etc.}
+%   \cs{driver_draw_stroke_cmyk:nnnn}, \emph{etc.}
 % \end{function}
 %
 % \begin{function}[added = 2018-02-20]{\driver_color_gray:n}
@@ -138,7 +138,7 @@
 %   \end{syntax}
 %   Sets the color to the grayscale value specified, which is
 %   fp denotations in the range $0$ and $1$. For drawing colors, see
-%   \cs{driver_draw_color_gray:n}, \emph{etc.}
+%   \cs{driver_draw_stroke_gray:n}, \emph{etc.}
 % \end{function}
 %
 % \begin{function}[added = 2018-02-20]{\driver_color_rgb:nnn}
@@ -147,7 +147,7 @@
 %   \end{syntax}
 %   Sets the color to the RGB values specified, all of which are
 %   fp denotations in the range $0$ and $1$. For drawing colors, see
-%   \cs{driver_draw_color_rgb:nnn}, \emph{etc.}
+%   \cs{driver_draw_stroke_rgb:nnn}, \emph{etc.}
 % \end{function}
 %
 % \begin{function}[added = 2018-02-20]{\driver_color_reset:}
