--- a/l3experimental/l3draw/l3draw-state.dtx
+++ b/l3experimental/l3draw/l3draw-state.dtx
@@ -58,10 +58,6 @@
 %<@@=draw>
 %    \end{macrocode}
 %
-%    \begin{macrocode}
-\cs_generate_variant:Nn \group_insert_after:N { c }
-%    \end{macrocode}
-%
 % \begin{variable}{\g_@@_linewidth_dim, \g_@@_inner_linewidth_dim}
 %   Linewidth for strokes: global as the scope for this relies on the graphics
 %   state. The inner line width is used for places where two lines are used.
@@ -151,10 +147,7 @@
     \@@_color_aux:Vn \l_@@_color_tmp_tl {#1}
   }
 \cs_new_protected:Npn \@@_color_aux:nn #1#2
-  {
-    \@@_color:nw {#2} #1 \q_stop
-    \group_insert_after:c { driver_draw_color_ #2 _reset: }
-  }
+  { \@@_color:nw {#2} #1 \q_stop }
 \cs_generate_variant:Nn \@@_color_aux:nn { V }
 \cs_new_protected:Npn \@@_color:nw #1#2 ~ #3 \q_stop
   { \use:c { @@_color_ #2 :nw } {#1} #3 \q_stop }
