Back to "scope" for states
This longer name doesn't really help.

--- a/l3experimental/l3draw/l3draw-scopes.dtx
+++ b/l3experimental/l3draw/l3draw-scopes.dtx
@@ -177,11 +177,11 @@
 % \end{variable}
 % \end{variable}
 %
-% \begin{macro}{\draw_scope_state_begin:, \draw_scope_state_begin:}
+% \begin{macro}{\draw_scope_begin:, \draw_scope_begin:}
 %   As well as the graphics (and \TeX{}) scope, also deal with global
 %   data structures.
 %    \begin{macrocode}
-\cs_new_protected:Npn \draw_scope_state_begin:
+\cs_new_protected:Npn \draw_scope_begin:
   {
     \driver_draw_scope_begin:
     \group_begin:
@@ -189,7 +189,7 @@
       \tl_set_eq:NN \l_@@_fill_color_tl \g_@@_fill_color_tl
       \tl_set_eq:NN \l_@@_stroke_color_tl \g_@@_stroke_color_tl
   }
-\cs_new_protected:Npn \draw_scope_state_end:
+\cs_new_protected:Npn \draw_scope_end:
   {
       \dim_gset_eq:NN \g_@@_linewidth_dim \l_@@_linewidth_dim
       \tl_gset_eq:NN \g_@@_fill_color_tl \l_@@_fill_color_tl
