Redundant comment [ci skip]

--- a/l3kernel/l3color-base.dtx
+++ b/l3kernel/l3color-base.dtx
@@ -180,9 +180,7 @@
 % \begin{variable}{\l_@@_current_tl}
 %   As the setting data is used only
 %   for specials, and those are always space-separated, it makes most sense to
-%   hold the internal information in that form. Any splitting is done by a
-%   delimited function but often the entire \texttt{tl} can be used as-is:
-%   see \texttt{l3drivers.dtx}.
+%   hold the internal information in that form.
 %    \begin{macrocode}
 \tl_new:N \l_@@_current_tl
 \tl_set:Nn \l_@@_current_tl { gray~0 }
