--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -864,7 +864,7 @@
 %   here).
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_draw_literal:n #1
-  { \tex_special:D { ps:: ~ #1 } }
+  { \tex_special:D { ps:: #1 } }
 \cs_generate_variant:Nn \@@_draw_literal:n { x }
 %    \end{macrocode}
 % \end{macro}
