--- a/l3experimental/l3draw/l3draw-points.dtx
+++ b/l3experimental/l3draw/l3draw-points.dtx
@@ -880,20 +880,20 @@
   }
 \cs_new:Npn \@@_point_transform:nn #1#2
   {
-    \bool_if:NTF \l_@@_transformcm_active_bool
+    \bool_if:NTF \l_@@_matrix_active_bool
       {
         \@@_point_to_dim:n
           {
             (
-                \l_@@_transformcm_aa_fp * #1
-              + \l_@@_transformcm_ba_fp * #2
-              + \l_@@_transformcm_xshift_dim
+                \l_@@_matrix_aa_fp * #1
+              + \l_@@_matrix_ba_fp * #2
+              + \l_@@_xshift_dim
             )
             ,
             (
-                \l_@@_transformcm_ab_fp * #1
-              + \l_@@_transformcm_bb_fp * #2
-              + \l_@@_transformcm_yshift_dim
+                \l_@@_matrix_ab_fp * #1
+              + \l_@@_matrix_bb_fp * #2
+              + \l_@@_yshift_dim
             )
         }
       }
@@ -901,8 +901,7 @@
         \@@_point_to_dim:n
           {
               (#1, #2)
-            + ( \l_@@_transformcm_xshift_dim ,
-                \l_@@_transformcm_yshift_dim )
+            + ( \l_@@_xshift_dim , \l_@@_yshift_dim )
           }
       }
   }
@@ -921,18 +920,18 @@
   }
 \cs_new:Npn \@@_point_transform_noshift:nn #1#2
   {
-    \bool_if:NTF \l_@@_transformcm_active_bool
+    \bool_if:NTF \l_@@_matrix_active_bool
       {
         \@@_point_to_dim:n
           {
             (
-                \l_@@_transformcm_aa_fp * #1
-              + \l_@@_transformcm_ba_fp * #2
+                \l_@@_matrix_aa_fp * #1
+              + \l_@@_matrix_ba_fp * #2
             )
             ,
             (
-                \l_@@_transformcm_ab_fp * #1
-              + \l_@@_transformcm_bb_fp * #2
+                \l_@@_matrix_ab_fp * #1
+              + \l_@@_matrix_bb_fp * #2
             )
         }
       }
