First steps in box inclusion in drawings
In contrast to pgf, we want to do everything using driver-level specials
rather than raw PostScript/PDF. That means that the interfaces need to
be adjusted to avoid using translations at the driver level: these have
to be done in TeX.

There are various corrections to the driver code here.

At present, the SVG path may be completely out-of-line.

Note that some skews seem to mislead dvips/ps2pdf, resulting in entire
pages rotating. That does not seem to be due to 'leaking' rotations, and
is therefore likely down to some auto-detection somewhere.

--- a/l3experimental/l3draw/l3draw-scopes.dtx
+++ b/l3experimental/l3draw/l3draw-scopes.dtx
@@ -234,6 +234,82 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% \subsection{Inserting boxes}
+%
+% Inserting boxes requires us to \enquote{interrupt} the drawing state,
+% so is closely linked to scoping. At the same time, there are a few
+% additional features required to make text work in a flexible way.
+%
+% \begin{variable}{\l_@@_tmp_box}
+%    \begin{macrocode}
+\box_new:N \l_@@_tmp_box
+%    \end{macrocode}
+% \end{variable}
+%
+% \begin{macro}{\draw_hbox_set:Nn}
+%   Collect up the input and box, reset all of the structures and typeset.
+%   Note that in \pkg{pgf} the various reset parts are set up in an auxiliary,
+%   but this is not done here at present as it is all done only once.
+%    \begin{macrocode}
+\cs_new_protected:Npn \draw_hbox_set:Nn #1#2
+  {
+    \hbox_set:Nn #1
+      {
+        \color_ensure_current:
+        \@@_scope_bb_begin:
+        \draw_path_scope_begin:
+        \draw_transform_matrix_reset:
+        \draw_transform_shift_reset:
+          #2
+        \draw_path_scope_end:
+        \@@_scope_bb_end:
+      }
+  }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}{\draw_hbox_use:N}
+%   Before inserting a box, we need to make sure that the bounding box is being
+%   updated correctly. As drawings track transformations as a whole, rather
+%   than as separate operations, we do the insertion using an almost-raw
+%   matrix.
+%    \begin{macrocode}
+\cs_new_protected:Npn \draw_hbox_use:N #1
+  {
+    \@@_point_process:nn
+      { \@@_path_update_limits:nn }
+      { \draw_point_transform:n { 0pt , \box_dp:N #1 } }
+    \@@_point_process:nn
+      { \@@_path_update_limits:nn }
+      { \draw_point_transform:n { \box_wd:N #1 , \box_dp:N #1 } }
+    \@@_point_process:nn
+      { \@@_path_update_limits:nn }
+      { \draw_point_transform:n { 0pt , \box_ht:N #1 } }
+    \@@_point_process:nn
+      { \@@_path_update_limits:nn }
+      { \draw_point_transform:n { \box_wd:N #1 , \box_ht:N #1 } }
+    \group_begin:
+      \hbox_set:Nn \l_@@_tmp_box
+        {
+          \tex_kern:D \l_@@_xshift_dim
+          \box_move_up:nn { \l_@@_yshift_dim } { \box_use:N #1 }
+        }
+      \box_set_ht:Nn \l_@@_tmp_box { 0pt }
+      \box_set_dp:Nn \l_@@_tmp_box { 0pt }
+      \box_set_wd:Nn \l_@@_tmp_box { 0pt }
+      \use:x
+        {
+          \driver_draw_hbox_use:Nnnnn \l_@@_tmp_box
+            { \fp_use:N \l_@@_matrix_a_fp }
+            { \fp_use:N \l_@@_matrix_b_fp }
+            { \fp_use:N \l_@@_matrix_c_fp }
+            { \fp_use:N \l_@@_matrix_d_fp }
+         }
+    \group_end:
+  }
+%    \end{macrocode}
+% \end{macro}
+%
 %    \begin{macrocode}
 %</initex|package>
 %    \end{macrocode}
