--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -428,7 +428,7 @@
 %
 % \subsection{Inserting \TeX{} material}
 %
-% \begin{function}{\driver_draw_hbox:Nnnnnnn}
+% \begin{function}{\driver_draw_hbox_use:Nnnnn}
 %   \begin{syntax}
 %     \cs{driver_draw_hbox:Nnnnnnn} \meta{box}
 %       \Arg{a} \Arg{b} \Arg{c} \Arg{d} \Arg{x} \Arg{y}
@@ -1179,7 +1179,7 @@
       {
         \fp_compare:nNnTF {#1} = \c_zero_fp
           { 0 }
-          { \fp_eval:n { round ( -#1 , 5 ) } } ~
+          { \fp_eval:n { round ( -#1, 5 ) } } ~
           rotate
       }
     \@@_draw_literal:n
@@ -1192,7 +1192,7 @@
       {
         \fp_compare:nNnTF {#4} = \c_zero_fp
           { 0 }
-          { \fp_eval:n { round ( -#1 , 5 ) } } ~
+          { \fp_eval:n { round ( -#4 , 5 ) } } ~
           rotate
       }
   }
@@ -1200,7 +1200,7 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}{\driver_draw_hbox:Nnnnnnn}
+% \begin{macro}{\driver_draw_hbox_use:Nnnnn}
 %   Inside a picture |@beginspecial|/|@endspecial| are active, which is
 %   normally a good thing but means that the position and scaling would be off
 %   if the box was inserted directly. Instead, we need to reverse the effect of
@@ -1210,7 +1210,7 @@
 %   drawing origin so has to be done purely in driver code not using \TeX{}
 %   offsets.
 %    \begin{macrocode}
-\cs_new_protected:Npn \driver_draw_hbox:Nnnnnnn #1#2#3#4#5#6#7
+\cs_new_protected:Npn \driver_draw_hbox_use:Nnnnn #1#2#3#4#5
   {
     \@@_scope_begin:
     \@@_draw_literal:n { [end] }
@@ -1218,10 +1218,7 @@
     \@@_draw_literal:n { 72~Resolution~div~72~VResolution~div~neg~scale }
     \@@_draw_literal:n { magscale~{1~DVImag~div~dup~scale}~if }
     \@@_draw_literal:n { l3x~neg~l3y~neg~translate }
-    \box_set_wd:Nn #1 { 0pt }
-    \box_set_ht:Nn #1 { 0pt }
-    \box_set_dp:Nn #1 { 0pt }
-    \box_use:N #1
+    \hbox_overlap_right:n { \box_use:N #1 }
     \@@_draw_literal:n { [begin] }
     \@@_scope_end:
   }
@@ -2091,25 +2088,25 @@
 %<*dvipdfmx|xdvipdfmx>
 \cs_new_protected:Npn \@@_draw_cm:nnnn #1#2#3#4
   {
-    \@@_draw_literal:n
+    \tex_special:D
       {
         x:rotate~
         \fp_compare:nNnTF {#1} = \c_zero_fp
           { 0 }
-          { \fp_eval:n { round ( #1 , 5 ) } }
+          { \fp_eval:n { round ( -#1 , 5 ) } }
       }
-    \@@_draw_literal:n
+    \tex_special:D
       {
         x:scale~
         \fp_eval:n { round ( #2 , 5 ) } ~
         \fp_eval:n { round ( #3 , 5 ) }
       }
-    \@@_draw_literal:n
+    \tex_special:D
       {
         x:rotate~
         \fp_compare:nNnTF {#4} = \c_zero_fp
           { 0 }
-          { \fp_eval:n { round ( -#1 , 5 ) } }
+          { \fp_eval:n { round ( -#4 , 5 ) } }
       }
   }
 %</dvipdfmx|xdvipdfmx>
@@ -2117,7 +2114,7 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}{\driver_draw_hbox:Nnnnnnn}
+% \begin{macro}{\driver_draw_hbox_use:Nnnnn}
 % \begin{variable}{\l_@@_tmp_box}
 %   Inserting a \TeX{} box transformed to the requested position and using
 %   the current matrix is done using a mixture of \TeX{} and low-level
@@ -2126,19 +2123,12 @@
 %   operation can never be cached, the scope is set directly not using the
 %   \texttt{draw} version.
 %    \begin{macrocode}
-\cs_new_protected:Npn \driver_draw_hbox:Nnnnnnn #1#2#3#4#5#6#7
+\cs_new_protected:Npn \driver_draw_hbox_use:Nnnnn #1#2#3#4#5
   {
-    \hbox_set_to_wd:Nnn \l_@@_tmp_box { 0pt }
-      {
-        \tex_kern:D \dim_eval:n {#6}
-        \driver_draw_scope_begin:
-        \driver_draw_cm:nnnn {#2} {#3} {#4} {#5}
-        \box_move_up:nn {#7} { \box_use:N #1 }
-        \driver_draw_scope_end:
-      }
-    \box_set_ht:Nn \l_@@_tmp_box { 0pt }
-    \box_set_dp:Nn \l_@@_tmp_box { 0pt }
-    \box_use:N \l_@@_tmp_box
+    \driver_draw_scope_begin:
+    \driver_draw_cm:nnnn {#2} {#3} {#4} {#5}
+    \hbox_overlap_right:n { \box_use:N #1 }
+    \driver_draw_scope_end:
   }
 \box_new:N \l_@@_tmp_box
 %    \end{macrocode}
@@ -2778,7 +2768,11 @@
 %
 % \begin{macro}{\@@_draw_cm_decompose:nnnnN}
 % \begin{macro}
-%   {\@@_draw_cm_decompose_auxi:nnnnN, \@@_draw_cm_decompose_auxii:nnnnN}
+%   {
+%     \@@_draw_cm_decompose_auxi:nnnnN,
+%     \@@_draw_cm_decompose_auxii:nnnnN,
+%     \@@_draw_cm_decompose_auxiii:nnnnN,
+%   }
 %   Internally, transformations for drawing are tracked as a matrix. Not all
 %   engines provide a way of dealing with this: if we use a raw matrix, the
 %   engine looses track of positions (for example for hyperlinks), and this is
@@ -2816,14 +2810,16 @@
 %   \]
 %   From these, we can find that
 %   \begin{align*}
-%     \frac{w_{1} + w_{2}}{1} &= \sqrt{E^{2} + H^{2}} \\
-%     \frac{w_{1} - w_{2}}{1} &= \sqrt{F^{2} + G^{2}} \\
+%     \frac{w_{1} + w_{2}}{2} &= \sqrt{E^{2} + H^{2}} \\
+%     \frac{w_{1} - w_{2}}{2} &= \sqrt{F^{2} + G^{2}} \\
 %     \gamma - \beta &= \tan^{-1}(G/F) \\
 %     \gamma + \beta &= \tan^{-1}(H/E)
 %   \end{align*}
 %   at which point we just have to do various pieces of re-arrangement to
 %   get all of the values. (See J.~Blinn, \emph{IEEE Comput.\ Graph.\ Appl.},
-%   1996, \textbf{16}, 82--88.)
+%   1996, \textbf{16}, 82--88.) There is one wrinkle: the PostScript (and PDF)
+%   way of specifying a transformation matrix exchanges where one would
+%   normally expect $B$ and $C$ to be.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_draw_cm_decompose:nnnnN #1#2#3#4#5
   {
@@ -2831,9 +2827,9 @@
       {
         \@@_draw_cm_decompose_auxi:nnnnN
           { \fp_eval:n { (#1 + #4) / 2 } }
-          { \fp_eval:n { #1 - (#1 + #4) / 2 } }
-          { \fp_eval:n { (#2 + #3) / 2 } }
-          { \fp_eval:n { #2 - (#2 + #3) / 2 } }
+          { \fp_eval:n { (#1 - #4) / 2 } }
+          { \fp_eval:n { (#3 + #2) / 2 } }
+          { \fp_eval:n { (#3 - #2) / 2 } }
       }
         #5
   }
@@ -2842,10 +2838,10 @@
     \use:x
       {
         \@@_draw_cm_decompose_auxii:nnnnN
-          { \fp_eval:n { sqrt ( #1 * #1 + #4 * #4 ) } }
-          { \fp_eval:n { sqrt ( #2 * #2 + #3 * #3 ) } }
-          { \fp_eval:n { atand ( #3 / #2 ) } }
-          { \fp_eval:n { atand ( #4 / #1 ) } }
+          { \fp_eval:n { 2 * sqrt ( #1 * #1 + #4 * #4 ) } }
+          { \fp_eval:n { 2 * sqrt ( #2 * #2 + #3 * #3 ) } }
+          { \fp_eval:n { atand ( #3 , #2 ) } }
+          { \fp_eval:n { atand ( #4 , #1 ) } }
       }
          #5
   }
@@ -2853,12 +2849,19 @@
   {
     \use:x
       {
-        \exp_not:N #5
+        \@@_draw_cm_decompose_auxiii:nnnnN
           { \fp_eval:n { ( #4 - #3 ) / 2 } }
-          { \fp_eval:n { #1 + #2 } }
-          { \fp_eval:n { #1 - #2 } }
+          { \fp_eval:n { ( #1 + #2 ) / 2 } }
+          { \fp_eval:n { ( #1 - #2 ) / 2 } }
           { \fp_eval:n { ( #4 + #3 ) / 2 } }
       }
+        #5
+  }
+\cs_new_protected:Npn \@@_draw_cm_decompose_auxiii:nnnnN #1#2#3#4#5
+  {
+    \fp_compare:nNnTF { abs( #2 ) } > { abs ( #3 ) }
+      { #5 {#1} {#2} {#3} {#4} }
+      { #5 {#1} {#3} {#2} {#4} }
   }
 %    \end{macrocode}
 % \end{macro}
