Use a hbox for drawings

--- a/l3experimental/l3draw/l3draw-scopes.dtx
+++ b/l3experimental/l3draw/l3draw-scopes.dtx
@@ -109,23 +109,17 @@
 %
 % \begin{macro}{\draw_begin:, \draw_end:}
 %   Drawings are created by setting them into a box, then adjusting the box
-%   before inserting into the surroundings. At present the content is simply
-%   collected then dumped: work will be required to manipulate the size as
-%   this data becomes more defined. It may be that a coffin construct is
-%   better here in the longer term: that may become clearer as the code is
-%   completed. Another obvious question is whether/where vertical mode should
-%   be ended (\emph{i.e.}~should this behave like a raw |\vbox| or like
-%   a coffin). In contrast to \pkg{pgf}, we use a vertical box here: material
-%   between explicit instructions should not be present anyway. (Consider
-%   adding an |\everypar| hook as done for the \LaTeXe{} preamble.) Color is
-%   set here using the drawing mechanism largely as it then sets up the
-%   internal data structures.
+%   before inserting into the surroundings. Color is set here using the drawing
+%   mechanism largely as it then sets up the internal data structures. It may be
+%   that a coffin construct is better here in the longer term: that may become
+%   clearer as the code is completed. As we need to avoid any insertion of
+%   baseline skips, the outer box here has to be an |hbox|.
 %    \begin{macrocode}
 \cs_new_protected:Npn \draw_begin:
   {
     \group_begin:
       \int_gincr:N \g_@@_id_int
-      \vbox_set:Nw \l_@@_main_box
+      \hbox_set:Nw \l_@@_main_box
         \driver_draw_begin:
         \@@_reset_bb:
         \@@_path_reset_limits:
@@ -139,7 +133,7 @@
 \cs_new_protected:Npn \draw_end:
   {
         \driver_draw_end:
-      \vbox_set_end:
+      \hbox_set_end:
       \dim_compare:nNnT \g_@@_xmin_dim = \c_max_dim
         {
           \dim_gzero:N \g_@@_xmax_dim
