Rename a driver function

--- a/l3experimental/l3draw/l3draw-scopes.dtx
+++ b/l3experimental/l3draw/l3draw-scopes.dtx
@@ -293,7 +293,7 @@
       \box_set_wd:Nn \l_@@_tmp_box { 0pt }
       \use:x
         {
-          \driver_draw_hbox_use:Nnnnn \l_@@_tmp_box
+          \driver_draw_box_use:Nnnnn \l_@@_tmp_box
             { \fp_use:N \l_@@_matrix_a_fp }
             { \fp_use:N \l_@@_matrix_b_fp }
             { \fp_use:N \l_@@_matrix_c_fp }
