--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -428,9 +428,9 @@
 %
 % \subsection{Inserting \TeX{} material}
 %
-% \begin{function}{\driver_draw_hbox_use:Nnnnn}
+% \begin{function}{\driver_draw_box_use:Nnnnn}
 %   \begin{syntax}
-%     \cs{driver_draw_hbox:Nnnnnnn} \meta{box}
+%     \cs{driver_draw_box:Nnnnnnn} \meta{box}
 %       \Arg{a} \Arg{b} \Arg{c} \Arg{d} \Arg{x} \Arg{y}
 %   \end{syntax}
 %   Inserts the \meta{box} as an hbox with the box reference point placed
@@ -1200,7 +1200,7 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}{\driver_draw_hbox_use:Nnnnn}
+% \begin{macro}{\driver_draw_box_use:Nnnnn}
 %   Inside a picture |@beginspecial|/|@endspecial| are active, which is
 %   normally a good thing but means that the position and scaling would be off
 %   if the box was inserted directly. Instead, we need to reverse the effect of
@@ -1210,7 +1210,7 @@
 %   drawing origin so has to be done purely in driver code not using \TeX{}
 %   offsets.
 %    \begin{macrocode}
-\cs_new_protected:Npn \driver_draw_hbox_use:Nnnnn #1#2#3#4#5
+\cs_new_protected:Npn \driver_draw_box_use:Nnnnn #1#2#3#4#5
   {
     \@@_scope_begin:
     \@@_draw_literal:n { [end] }
@@ -2114,8 +2114,8 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}{\driver_draw_hbox_use:Nnnnn}
 % \begin{variable}{\l_@@_tmp_box}
+% \begin{macro}{\driver_draw_box_use:Nnnnn}
 %   Inserting a \TeX{} box transformed to the requested position and using
 %   the current matrix is done using a mixture of \TeX{} and low-level
 %   manipulation. The offset can be handled by \TeX{}, so only any rotation/^^A
@@ -2123,7 +2123,7 @@
 %   operation can never be cached, the scope is set directly not using the
 %   \texttt{draw} version.
 %    \begin{macrocode}
-\cs_new_protected:Npn \driver_draw_hbox_use:Nnnnn #1#2#3#4#5
+\cs_new_protected:Npn \driver_draw_box_use:Nnnnn #1#2#3#4#5
   {
     \driver_draw_scope_begin:
     \driver_draw_cm:nnnn {#2} {#3} {#4} {#5}
