Update some docs [ci skip]

--- a/l3experimental/l3draw/l3draw.dtx
+++ b/l3experimental/l3draw/l3draw.dtx
@@ -863,7 +863,7 @@
 %
 % \subsection{Color}
 %
-% \begin{function}{\draw_color:n, \draw_fill:n, \draw_stroke:n}
+% \begin{function}{\draw_color:n, \draw_color_fill:n, \draw_color_stroke:n}
 %   \begin{syntax}
 %     \cs{draw_color:n} \Arg{color expression}
 %   \end{syntax}
