--- a/l3experimental/l3draw/l3draw-scopes.dtx
+++ b/l3experimental/l3draw/l3draw-scopes.dtx
@@ -294,16 +294,16 @@
                 { \fp_use:N \l_@@_matrix_d_fp }
             }
         }
-      \box_set_ht:Nn \l_@@_tmp_box { 0pt }
-      \box_set_dp:Nn \l_@@_tmp_box { 0pt }
-      \box_set_wd:Nn \l_@@_tmp_box { 0pt }
       \hbox_set:Nn \l_@@_tmp_box
         {
           \tex_kern:D \l_@@_xshift_dim
           \box_move_up:nn { \l_@@_yshift_dim }
-            { \box_use_clear:N \l_@@_tmp_box }
+            { \box_use_drop:N \l_@@_tmp_box }
         }
-      \box_use_clear:N \l_@@_tmp_box
+      \box_set_ht:Nn \l_@@_tmp_box { 0pt }
+      \box_set_dp:Nn \l_@@_tmp_box { 0pt }
+      \box_set_wd:Nn \l_@@_tmp_box { 0pt }
+      \box_use_drop:N \l_@@_tmp_box
     \group_end:
   }
 %    \end{macrocode}
