Re-arrange how drawing is suspended
This is the pgf way and will allow us to avoid
needing lots of box/coffin functions.

--- a/l3experimental/l3draw/l3draw-boxes.dtx
+++ b/l3experimental/l3draw/l3draw-boxes.dtx
@@ -78,13 +78,9 @@
     \hbox_set:Nn #1
       {
         \color_ensure_current:
-        \@@_scope_bb_begin:
-        \draw_path_scope_begin:
-        \draw_transform_matrix_reset:
-        \draw_transform_shift_reset:
+        \draw_suspend_begin:
           #2
-        \draw_path_scope_end:
-        \@@_scope_bb_end:
+        \draw_suspend_end:
       }
   }
 %    \end{macrocode}
