Allow bb update for boxes to be turned on/off

--- a/l3experimental/l3draw/l3draw-boxes.dtx
+++ b/l3experimental/l3draw/l3draw-boxes.dtx
@@ -76,18 +76,21 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \draw_hbox_use:N #1
   {
-    \@@_point_process:nn
-      { \@@_path_update_limits:nn }
-      { \draw_point_transform:n { 0pt , \box_dp:N #1 } }
-    \@@_point_process:nn
-      { \@@_path_update_limits:nn }
-      { \draw_point_transform:n { \box_wd:N #1 , \box_dp:N #1 } }
-    \@@_point_process:nn
-      { \@@_path_update_limits:nn }
-      { \draw_point_transform:n { 0pt , \box_ht:N #1 } }
-    \@@_point_process:nn
-      { \@@_path_update_limits:nn }
-      { \draw_point_transform:n { \box_wd:N #1 , \box_ht:N #1 } }
+    \bool_if:NT \l_draw_bb_update_bool
+      {
+        \@@_point_process:nn
+          { \@@_path_update_limits:nn }
+          { \draw_point_transform:n { 0pt , \box_dp:N #1 } }
+        \@@_point_process:nn
+          { \@@_path_update_limits:nn }
+          { \draw_point_transform:n { \box_wd:N #1 , \box_dp:N #1 } }
+        \@@_point_process:nn
+          { \@@_path_update_limits:nn }
+          { \draw_point_transform:n { 0pt , \box_ht:N #1 } }
+        \@@_point_process:nn
+          { \@@_path_update_limits:nn }
+          { \draw_point_transform:n { \box_wd:N #1 , \box_ht:N #1 } }
+      }
     \group_begin:
       \hbox_set:Nn \l_@@_tmp_box
         {
