Drawing boxes don't have to be hboxes

--- a/l3experimental/l3draw/l3draw-boxes.dtx
+++ b/l3experimental/l3draw/l3draw-boxes.dtx
@@ -68,13 +68,13 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{macro}{\draw_hbox_use:N}
+% \begin{macro}{\draw_box_use:N}
 %   Before inserting a box, we need to make sure that the bounding box is being
 %   updated correctly. As drawings track transformations as a whole, rather
 %   than as separate operations, we do the insertion using an almost-raw
 %   matrix.
 %    \begin{macrocode}
-\cs_new_protected:Npn \draw_hbox_use:N #1
+\cs_new_protected:Npn \draw_box_use:N #1
   {
     \bool_if:NT \l_draw_bb_update_bool
       {
