--- a/l3experimental/l3draw/l3draw.dtx
+++ b/l3experimental/l3draw/l3draw.dtx
@@ -880,7 +880,7 @@
 %   \cs{l_draw_bb_update_bool} boolean.
 % \end{variable}
 %
-% \subsection{Text}
+% \subsection{Boxes and coffins}
 %
 % \begin{function}{\draw_box_use:N}
 %   \begin{syntax}
@@ -890,6 +890,18 @@
 %   transformation matrix and shift, and adjusting the drawing bounding
 %   box to contain the (apparent) size of the box if this is active
 %   (see \cs{l_draw_bb_update_bool}).
+% \end{function}
+%
+% \begin{function}{\draw_coffin_use:Nnn}
+%   \begin{syntax}
+%     \cs{draw_coffin_use:N} \meta{coffin} \Arg{hpole} \Arg{vpole}
+%   \end{syntax}
+%   Inserts the \meta{coffin} into a drawing, taking account of the current
+%   transformation matrix and shift, and adjusting the drawing bounding
+%   box to contain the (apparent) size of the box if this is active
+%   (see \cs{l_draw_bb_update_bool}). The alignment point of the coffin to
+%   the origin is specified by the intersection of the \meta{hpole} and the
+%   \meta{vpole}.
 % \end{function}
 %
 % \subsection{Color}
