Some examples [ci skip]

--- a/l3experimental/l3draw/l3draw.dtx
+++ b/l3experimental/l3draw/l3draw.dtx
@@ -185,6 +185,26 @@
 %   Suspends all of the drawing mechanisms to allow \enquote{normal}
 %   material to be created. Typically, this environment will be applied
 %   inside a box which may contain nested pictures.
+%   \begin{demo}
+%     \draw_begin:
+%       \draw_path_moveto:n { 0cm , 0cm }
+%       \hbox_set:Nn \l_tmpa_box
+%         {
+%           \draw_suspend_begin:
+%             This~is~normal~text.
+%             \draw_begin: % A subpicture
+%               \draw_path_moveto:n { 1cm , 0cm }
+%               \draw_path_lineto:n { 1cm , 1cm }
+%               \draw_path_use_clear:n { stroke }
+%             \draw_end:
+%             More~text.
+%           \draw_suspend_end:
+%         }
+%       \draw_box_use:N \l_tmpa_box
+%       \draw_path_lineto:n { 0cm , 1cm }
+%       \draw_path_use_clear:n { stroke }
+%     \draw_end:
+%   \end{demo}
 % \end{function}
 %
 % \subsection{Graphics state}
@@ -890,6 +910,27 @@
 %   transformation matrix and shift, and adjusting the drawing bounding
 %   box to contain the (apparent) size of the box if this is active
 %   (see \cs{l_draw_bb_update_bool}).
+%   \begin{demo}
+%     \draw_begin:
+%       \draw_path_moveto:n { 0cm , 0cm }
+%       \draw_path_lineto:n { 0cm , 1cm }
+%       \draw_path_use_clear:n { stroke }
+%       \hbox_set:Nn \l_tmpa_box
+%         { This~is~text. }
+%       \draw_box_use:N \l_tmpa_box
+%     \draw_end:
+%   \end{demo}
+%   \begin{demo}
+%     \draw_begin:
+%       \draw_transform_matrix:nnnn { 2 } { 0 } { 1 } { 2 }
+%       \draw_path_moveto:n { 0cm , 0cm }
+%       \draw_path_lineto:n { 0cm , 1cm }
+%       \draw_path_use_clear:n { stroke }
+%       \hbox_set:Nn \l_tmpa_box
+%         { This~is~text. }
+%       \draw_box_use:N \l_tmpa_box
+%     \draw_end:
+%   \end{demo}
 % \end{function}
 %
 % \begin{function}{\draw_coffin_use:Nnn}
@@ -902,6 +943,16 @@
 %   (see \cs{l_draw_bb_update_bool}). The alignment point of the coffin to
 %   the origin is specified by the intersection of the \meta{hpole} and the
 %   \meta{vpole}.
+%   \begin{demo}
+%     \draw_begin:
+%       \draw_path_moveto:n { 0cm , 0cm }
+%       \draw_path_lineto:n { 0cm , 1cm }
+%       \draw_path_use_clear:n { stroke }
+%       \hcoffin_set:Nn \l_tmpa_coffin
+%         { This~is~text. }
+%       \draw_coffin_use:Nnn \l_tmpa_coffin { hc } { vc }
+%     \draw_end:
+%   \end{demo}
 % \end{function}
 %
 % \subsection{Color}
