--- a/l3experimental/l3draw/l3draw.dtx
+++ b/l3experimental/l3draw/l3draw.dtx
@@ -347,7 +347,7 @@
 % higher-level functions, for example path construction, and allows parts of
 % a drawing to be rotated, scaled or skewed. This occurs before writing any
 % data to the driver, and so such manipulations are tracked by the drawing
-% mechanisms. See \cs{driver_draw_transformcm:nnnnnn} for driver-level
+% mechanisms. See \cs{driver_draw_cm:nnnn} for driver-level
 % manipulation of the canvas axes themselves.
 %
 % Notice that in contrast to \pkg{pgf} it is possible to give the positions
@@ -946,7 +946,7 @@
 %
 % Points are normally used unchanged relative to the canvas axes. This can
 % be modified by applying a transformation matrix. The canvas axes themselves
-% may be adjusted using \cs{driver_draw_transformcm:nnnnnn}: note that this
+% may be adjusted using \cs{driver_draw_cm:nnnn}: note that this
 % is transparent to the drawing code so is not tracked.
 %
 % \begin{function}
