Remove end-of-2017 deprecated commands
This got missed before as l3build was forcing the epoch
on typesetting: we now get an l3doc error.

--- a/l3kernel/l3deprecation.dtx
+++ b/l3kernel/l3deprecation.dtx
@@ -83,6 +83,8 @@
           { \tl_to_str:n {#3} } { \token_to_str:N #1 } { \tl_to_str:n {#2} }
       }
   }
+\@@_error:Nnn \file_if_exist_input:nT { \file_if_exist:nT and~ \file_input:n } { 2018-03-05 }
+\@@_error:Nnn \file_if_exist_input:nTF { \file_if_exist:nT and~ \file_input:n } { 2018-03-05 }
 \@@_error:Nnn \c_job_name_tl { \c_sys_jobname_str } { 2017-01-01 }
 \@@_error:Nnn \dim_case:nnn { \dim_case:nnF } { 2015-07-14 }
 \@@_error:Nnn \int_case:nnn { \int_case:nnF } { 2015-07-14 }
@@ -92,6 +94,7 @@
 \@@_error:Nnn \int_to_binary:n { \int_to_bin:n } { 2016-01-05 }
 \@@_error:Nnn \int_to_hexadecimal:n { \int_to_hex:n } { 2016-01-05 }
 \@@_error:Nnn \int_to_octal:n { \int_to_oct:n } { 2016-01-05 }
+\@@_error:Nnn \ior_get_str:NN { \ior_str_get:NN } { 2018-03-05 }
 \@@_error:Nnn \luatex_if_engine_p: { \sys_if_engine_luatex_p: } { 2017-01-01 }
 \@@_error:Nnn \luatex_if_engine:F { \sys_if_engine_luatex:F } { 2017-01-01 }
 \@@_error:Nnn \luatex_if_engine:T { \sys_if_engine_luatex:T } { 2017-01-01 }
@@ -110,6 +113,8 @@
 \@@_error:Nnn \str_case_x:nnn { \str_case_x:nnF } { 2015-07-14 }
 \@@_error:Nnn \tl_case:cnn { \tl_case:cnF } { 2015-07-14 }
 \@@_error:Nnn \tl_case:Nnn { \tl_case:NnF } { 2015-07-14 }
+\@@_error:Nnn \tl_to_lowercase:n { \tex_lowercase:D } { 2018-03-05 }
+\@@_error:Nnn \tl_to_uppercase:n { \tex_uppercase:D } { 2018-03-05 }
 \@@_error:Nnn \xetex_if_engine_p: { \sys_if_engine_xetex_p: } { 2017-01-01 }
 \@@_error:Nnn \xetex_if_engine:F { \sys_if_engine_xetex:F } { 2017-01-01 }
 \@@_error:Nnn \xetex_if_engine:T { \sys_if_engine_xetex:T } { 2017-01-01 }
