--- a/l3kernel/l3fp-round.dtx
+++ b/l3kernel/l3fp-round.dtx
@@ -86,67 +86,18 @@
 % \begin{macro}[EXP]
 %   {
 %     \@@_parse_word_round:N, \@@_parse_round:Nw,
-%     \@@_parse_round_no_error:Nw,
-%     \@@_parse_round_deprecation_error:Nw
 %   }
-% \begin{macro}[deprecated = 2017-12-31]{round+, round0, round-}
-%   This looks for |+|, |-|, |0| after |round|.  That syntax was
-%   deprecated in 2013 but the system to tell users about deprecated
-%   syntax was not really available then, so we did not have anything
-%   set up.  When \pkg{l3doc} complains, remove the syntax by
-%   removing everything until the last \cs{fi:} in
-%   \cs{@@_parse_word_round:N} (and getting rid of the unused
-%   definitions of \cs{@@_parse_round:Nw} and so on, as well as the
-%   |fp-deprecated| error in \pkg{l3fp-parse}).
 %    \begin{macrocode}
 \cs_new:Npn \@@_parse_word_round:N #1#2
   {
-    \if_meaning:w + #2
-      \@@_parse_round:Nw \@@_round_to_pinf:NNN
-    \else:
-      \if_meaning:w 0 #2
-        \@@_parse_round:Nw \@@_round_to_zero:NNN
-      \else:
-        \if_meaning:w - #2
-          \@@_parse_round:Nw \@@_round_to_ninf:NNN
-        \fi:
-      \fi:
-    \fi:
     \@@_parse_function:NNN
       \@@_round_o:Nw \@@_round_to_nearest:NNN #1
     #2
   }
-\__kernel_debug:TF
-  {
-    \__kernel_deprecation_code:nn
-      {
-        \cs_set_eq:NN \@@_parse_round:Nw
-          \@@_parse_round_deprecation_error:Nw
-      }
-      {
-        \cs_set_eq:NN \@@_parse_round:Nw
-          \@@_parse_round_no_error:Nw
-      }
-    \cs_new:Npn \@@_parse_round_deprecation_error:Nw
-        #1 #2 \@@_round_to_nearest:NNN #3#4
-      {
-        \@@_error:nnfn { fp-deprecated } { round#4() }
-          {
-            \str_case:nn {#2}
-              { { + } { ceil } { 0 } { trunc } { - } { floor } }
-          } { }
-        #2 #1 #3
-      }
-    \cs_new:Npn \@@_parse_round_no_error:Nw
-        #1 #2 \@@_round_to_nearest:NNN #3#4 { #2 #1 #3 }
-    \cs_new_eq:NN \@@_parse_round:Nw \@@_parse_round_no_error:Nw
-  }
-  {
-    \cs_new:Npn \@@_parse_round:Nw
-        #1 #2 \@@_round_to_nearest:NNN #3#4 { #2 #1 #3 }
-  }
+\cs_new:Npn \@@_parse_round:Nw #1 #2 \@@_round_to_nearest:NNN #3#4
+  { #2 #1 #3 }
+
 %    \end{macrocode}
-% \end{macro}
 % \end{macro}
 %
 % \subsection{Rounding tools}
