--- a/l3kernel/l3oldmodules.dtx
+++ b/l3kernel/l3oldmodules.dtx
@@ -86,31 +86,11 @@
 %    \begin{macrocode}
 %<*oldmodules>
 \def\old@liii@module@name
-%<l3basics>{l3basics}
-%<l3bootstrap>{l3bootstrap}
-%<l3box>{l3box}
-%<l3candidates>{l3candidates}
-%<l3clist>{l3clist}
-%<l3coffins>{l3coffins}
-%<l3expan>{l3expan}
-%<l3file>{l3file}
-%<l3fp>{l3fp}
-%<l3int>{l3int}
-%<l3keys>{l3keys}
-%<l3msg>{l3msg}
-%<l3names>{l3names}
-%<l3prg>{l3prg}
-%<l3prop>{l3prop}
-%<l3quark>{l3quark}
 %<l3regex>{l3regex}
-%<l3seq>{l3seq}
-%<l3skip>{l3skip}
 %<l3sort>{l3sort}
 %<l3str>{l3str}
-%<l3tl>{l3tl}
 %<l3tl-analysis>{l3tl-analysis}
 %<l3tl-build>{l3tl-build}
-%<l3token>{l3token}
 %    \end{macrocode}
 %
 %    Then identify the current package:
@@ -129,20 +109,15 @@
 \typeout{** }
 \typeout{** Its functionality is now only provided as part of the expl3 package.}
 \typeout{** }
-%<!l3regex&!l3sort&!l3tl-analysis&!l3tl-build>\typeout{** After showing you an error message you can hit <return> we will continue}
-%<!l3regex&!l3sort&!l3tl-analysis&!l3tl-build>\typeout{** for now by loading expl3 for you. However, the old packages will be}
-%<!l3regex&!l3sort&!l3tl-analysis&!l3tl-build>\typeout{** removed entirely at the end of 2017.}
-%<l3regex|l3sort|l3tl-analysis|l3tl-build>\typeout{** The old packages will be removed entirely at the end of 2018.}
+\typeout{** The old packages will be removed entirely at the end of 2018.}
 \typeout{** }
 \typeout{** Therefore, please replace '\string\usepackage{\old@liii@module@name}'}
 \typeout{** with '\string\usepackage{expl3}' in your documents as soon as possible.}
 \typeout{** }
 \typeout{*******************************************************************}
-%<!l3regex&!l3sort&!l3tl-analysis&!l3tl-build>\PackageError
-%<l3regex|l3sort|l3tl-analysis|l3tl-build>\PackageWarning
+\PackageWarning
   \old@liii@module@name{This package is obsolete ---
    use 'expl3' instead}
-%<!l3regex&!l3sort&!l3tl-analysis&!l3tl-build>  \@ehc
 %    \end{macrocode}
 %    Finally load \texttt{expl3} so that the user can continue for now.
 %    \begin{macrocode}
