Doc fix [ci skip]

--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -1865,9 +1865,7 @@
 % \begin{macro}{\driver_draw_curveto:nnnnnn}
 % \begin{macro}{\driver_draw_rectangle:nnnn}
 %   Path creation operations all resolve directly to PDF primitive steps, with
-%   only the need to convert to \texttt{bp}. Notice that \texttt{x}-type
-%   expansion is included here to ensure that any variable values are
-%   forced to literals before any possible caching.
+%   only the need to convert to \texttt{bp}.
 %    \begin{macrocode}
 \cs_new_protected:Npn \driver_draw_moveto:nn #1#2
   {
