--- a/l3experimental/l3draw/l3draw-state.dtx
+++ b/l3experimental/l3draw/l3draw-state.dtx
@@ -58,12 +58,11 @@
 %<@@=draw>
 %    \end{macrocode}
 %
-% \begin{variable}{\g_@@_linewidth_dim, \g_@@_inner_linewidth_dim}
+% \begin{variable}{\g_@@_linewidth_dim}
 %   Linewidth for strokes: global as the scope for this relies on the graphics
 %   state. The inner line width is used for places where two lines are used.
 %    \begin{macrocode}
 \dim_new:N \g_@@_linewidth_dim
-\dim_new:N \g_@@_inner_linewidth_dim
 %    \end{macrocode}
 % \end{variable}
 %
@@ -75,18 +74,15 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{macro}{\draw_linewidth:n, \draw_inner_linewidth:n}
+% \begin{macro}{\draw_linewidth:n}
 %   Set the linewidth: we need a wrapper as this has to pass to the driver
-%   layer. The inner version is handled at the macro layer but is given a
-%   consistent interface here.
+%   layer.
 %    \begin{macrocode}
 \cs_new_protected:Npn \draw_linewidth:n #1
   {
     \dim_gset:Nn \g_@@_linewidth_dim { \fp_to_dim:n {#1} }
     \driver_draw_linewidth:n \g_@@_linewidth_dim
   }
-\cs_new_protected:Npn \draw_inner_linewidth:n #1
-  { \dim_gset:Nn \g_@@_inner_linewidth_dim { \fp_to_dim:n {#1} }  }
 %    \end{macrocode}
 % \end{macro}
 %
