Clearer formatting of dash pattern
... at least in \showoutput

--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -1076,14 +1076,15 @@
   {
     \@@_draw_literal:x
       {
-        [ ~
-          \clist_map_function:nN {#1} \@@_draw_dash:n
+        [ 
+          \exp_args:Nf \use:n
+            { \clist_map_function:nN {#1} \@@_draw_dash:n }
         ] ~
         \dim_to_decimal_in_bp:n {#2} ~ setdash
       }
   }
 \cs_new:Npn \@@_draw_dash:n #1
-  { \dim_to_decimal_in_bp:n {#1} ~ }
+  { ~ \dim_to_decimal_in_bp:n {#1} }
 \cs_new_protected:Npn \driver_draw_linewidth:n #1
   {
     \@@_draw_literal:x
@@ -1966,14 +1967,15 @@
   {
     \@@_draw_literal:x
       {
-        [ ~
-          \clist_map_function:nN {#1} \@@_draw_dash:n
+        [
+          \exp_args:Nf \use:n
+            { \clist_map_function:nN {#1} \@@_draw_dash:n }
         ] ~
         \dim_to_decimal_in_bp:n {#2} ~ d
       }
   }
 \cs_new:Npn \@@_draw_dash:n #1
-  { \dim_to_decimal_in_bp:n {#1} ~ }
+  { ~ \dim_to_decimal_in_bp:n {#1} }
 \cs_new_protected:Npn \driver_draw_linewidth:n #1
   {
     \@@_draw_literal:x
