Add dash patterns to drawings
This rounds out l3draw-scope, at least until inner
lines are sorted out.

--- a/l3experimental/l3draw/l3draw.dtx
+++ b/l3experimental/l3draw/l3draw.dtx
@@ -226,6 +226,44 @@
 %   \meta{fp expr}).
 % \end{function}
 %
+% \begin{function}{\draw_dash_pattern:nn}
+%   \begin{syntax}
+%     \cs{draw_dash_pattern:nn} \Arg{pattern} \Arg{phase}
+%   \end{syntax}
+%   Specifies a dash pattern. The \meta{pattern} itself is a comma-separated
+%   list of entries which represent the \enquote{on} and \enquote{off}
+%   parts of the line. These are all \meta{fp expr} and repeat as required.
+%   Thus the \meta{pattern} may be of arbitrary length. The \meta{phase}
+%   specifies where during the first \enquote{on} line the pattern should
+%   start.
+%   \begin{demo}
+%     \draw_begin:
+%       \draw_dash_pattern:nn
+%         { 0.5cm , 0.5cm , 0.1cm , 0.2cm }
+%         { 0cm }
+%       \draw_path_moveto:n { 0cm , 0cm }
+%       \draw_path_lineto:n { 2cm , 0cm }
+%       \draw_path_use_clear:n { stroke }
+%       \draw_dash_pattern:nn
+%         { 0.5cm , 0.5cm , 0.1cm , 0.2cm }
+%         { 0.1cm }
+%       \draw_path_moveto:n { 0cm , 1mm }
+%       \draw_path_lineto:n { 2cm , 1mm }
+%       \draw_path_use_clear:n { stroke }
+%       \draw_dash_pattern:nn
+%         { 0.5cm , 0.5cm , 0.1cm , 0.2cm }
+%         { 0.2cm }
+%       \draw_path_moveto:n { 0cm , 2mm }
+%       \draw_path_lineto:n { 2cm , 2mm }
+%       \draw_path_use_clear:n { stroke }
+%     \draw_end:
+%   \end{demo}
+%   Setting an empty pattern will produce a solid line.
+%   
+%   Note the \meta{pattern} interface here is different from that in \pkg{pgf}:
+%   the list is comma-separated not given in brace groups.
+% \end{function}
+%
 % \begin{function}{\draw_nonzero_rule:, \draw_evenodd_rule:}
 %   \begin{syntax}
 %     \cs{draw_nonzero_rule:}
