--- a/l3kernel/l3color-base.dtx
+++ b/l3kernel/l3color-base.dtx
@@ -79,7 +79,7 @@
 % \subsection{Internal functions}
 %
 % \begin{variable}[added = 2017-06-15, updated = 2017-10-02]
-%   {\l_@@_current_tl}
+%   {\l__color_current_tl}
 %   The color currently active for foreground (text, \emph{etc.}) material.
 %   This is stored in the form of a color model followed by one or more
 %   values. There are four pre-defined models, three of which take numerical
@@ -102,7 +102,7 @@
 %   number of data entries these require will depend on the number of
 %   colors to be mixed.
 %   \begin{texnote}
-%     The content of \cs{l_@@_current_tl} is space-separated as
+%     The content of \cs{l__color_current_tl} is space-separated as
 %     this allows it to be used directly in specials in many common cases.
 %     This internal representation is close to that used by the \texttt{dvips}
 %     program.
