docu corrections suggested by Svend Mortensen [ci skip]

--- a/l3kernel/l3flag.dtx
+++ b/l3kernel/l3flag.dtx
@@ -29,7 +29,7 @@
 % \fi
 %
 % \title{^^A
-%   The \textsf{l3flag} package: expandable flags^^A
+%   The \textsf{l3flag} package: Expandable flags^^A
 % }
 %
 % \author{^^A
