--- a/l3kernel/l3fp.dtx
+++ b/l3kernel/l3fp.dtx
@@ -35,7 +35,7 @@
 %
 %
 % \title{^^A
-%   The \textsf{l3fp} package: floating points^^A
+%   The \textsf{l3fp} package: Floating points^^A
 % }
 %
 % \author{^^A
