--- a/l3kernel/l3tl-build.dtx
+++ b/l3kernel/l3tl-build.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3tl-build.dtx Copyright (C) 2011-2017 The LaTeX3 Project
+%% File: l3tl-build.dtx Copyright (C) 2011-2018 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -30,7 +30,7 @@
 %
 %
 % \title{^^A
-%   The \textsf{l3tl-build} package: building token lists^^A
+%   The \textsf{l3tl-build} package: Building token lists^^A
 % }
 %
 % \author{^^A
