--- a/l3kernel/l3intarray.dtx
+++ b/l3kernel/l3intarray.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3intarray.dtx Copyright (C) 2017 The LaTeX3 Project
+%% File: l3intarray.dtx Copyright (C) 2017-2018 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -30,7 +30,7 @@
 %
 %
 % \title{^^A
-%   The \textsf{l3intarray} package: low-level arrays of small integers^^A
+%   The \textsf{l3intarray} package: Low-level arrays of small integers^^A
 % }
 %
 % \author{^^A
