--- a/l3kernel/l3luatex.dtx
+++ b/l3kernel/l3luatex.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3luatex.dtx Copyright (C) 2010-2017 The LaTeX3 Project
+%% File: l3luatex.dtx Copyright (C) 2010-2018 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -29,7 +29,7 @@
 % \fi
 %
 % \title{^^A
-%   The \pkg{l3luatex} package\\LuaTeX-specific functions^^A
+%   The \pkg{l3luatex} package: \LuaTeX-specific functions^^A
 % }
 %
 % \author{^^A
