--- a/l3kernel/l3sys.dtx
+++ b/l3kernel/l3sys.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3sys.dtx Copyright (C) 2015-2017 The LaTeX3 Project
+%% File: l3sys.dtx Copyright (C) 2015-2018 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -29,7 +29,7 @@
 % \fi
 %
 % \title{^^A
-%   The \pkg{l3sys} package\\System/runtime functions^^A
+%   The \pkg{l3sys} package: System/runtime functions^^A
 % }
 %
 % \author{^^A
