--- a/l3kernel/l3tl-analysis.dtx
+++ b/l3kernel/l3tl-analysis.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3tl-analysis.dtx Copyright (C) 2011-2017 The LaTeX3 Project%
+%% File: l3tl-analysis.dtx Copyright (C) 2011-2018 The LaTeX3 Project%
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -30,7 +30,7 @@
 %
 %
 % \title{^^A
-%   The \textsf{l3tl-analysis} package: analysing token lists^^A
+%   The \textsf{l3tl-analysis} package: Analysing token lists^^A
 % }
 %
 % \author{^^A
