--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -2134,7 +2134,6 @@
 % \begin{macro}[EXP, noTF]{\tl_case:Nn, \tl_case:cn}
 % \begin{macro}[EXP]{\@@_case:nnTF}
 % \begin{macro}[EXP]{\@@_case:Nw}
-% \begin{macro}[EXP]{\__prg_case_end:nw}
 % \begin{macro}[EXP]{\@@_case_end:nw}
 %   The aim here is to allow the case statement to be evaluated
 %   using a known number of expansion steps (two), and without
@@ -2187,11 +2186,9 @@
 %   the first \cs{q_mark} and so |#4| is the \texttt{false} code (the
 %   \texttt{true} code is mopped up by |#3|).
 %    \begin{macrocode}
-\cs_new:Npn \__prg_case_end:nw #1#2#3 \q_mark #4#5 \q_stop
+\cs_new:Npn \@@_case_end:nw #1#2#3 \q_mark #4#5 \q_stop
   { \exp_end: #1 #4 }
-\cs_new_eq:NN \@@_case_end:nw \__prg_case_end:nw
 %    \end{macrocode}
-% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
