Split tl and str case data
This avoids needing __unicode but also makes the
data more semantic: tokenized vs detokenized.

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -3036,7 +3036,7 @@
   {
     \@@_change_case_output:fwn
       {
-        \cs_if_exist_use:cF { c__unicode_lower_ \token_to_str:N #1 _tl }
+        \cs_if_exist_use:cF { c_@@_lower_case_ \token_to_str:N #1 _tl }
           { \@@_change_case_char_auxii:nN { lower } #1 }
       }
   }
@@ -3044,16 +3044,16 @@
   {
     \@@_change_case_output:fwn
       {
-        \cs_if_exist_use:cF { c__unicode_upper_ \token_to_str:N #1 _tl }
+        \cs_if_exist_use:cF { c_@@_upper_case_ \token_to_str:N #1 _tl }
           { \@@_change_case_char_auxii:nN { upper } #1 }
       }
   }
 \cs_new:Npn \@@_change_case_char_mixed:N #1
   {
-    \cs_if_exist:cTF { c__unicode_mixed_ \token_to_str:N #1 _tl }
+    \cs_if_exist:cTF { c_@@_mixed_case_ \token_to_str:N #1 _tl }
       {
         \@@_change_case_output:fwn
-          { \tl_use:c { c__unicode_mixed_ \token_to_str:N #1 _tl } }
+          { \tl_use:c { c_@@_mixed_case_ \token_to_str:N #1 _tl } }
       }
       { \@@_change_case_char_upper:N #1 }
   }
@@ -3083,10 +3083,10 @@
       { \@@_change_case_char_UTFviii:nnN {#1} {#2#4#5#6} #3 }
     \cs_new:Npn \@@_change_case_char_UTFviii:nnN #1#2#3
       {
-        \cs_if_exist:cTF { c__unicode_ #1 _ \tl_to_str:n {#2} _tl }
+        \cs_if_exist:cTF { c_@@_ #1 _case_ \tl_to_str:n {#2} _tl }
           {
             \@@_change_case_output:vwn
-              { c__unicode_ #1 _ \tl_to_str:n {#2} _tl }
+              { c_@@_ #1 _case_ \tl_to_str:n {#2} _tl }
           }
           { \@@_change_case_output:nwn {#2} }
         #3
@@ -3320,7 +3320,7 @@
   {
     \tl_if_head_is_N_type:nTF {#1}
       { \@@_change_case_lower_sigma:Nw #1 \q_recursion_stop }
-      { \c__unicode_final_sigma_tl }
+      { \c_@@_final_sigma_tl }
   }
 \cs_new:Npn \@@_change_case_lower_sigma:Nw #1#2 \q_recursion_stop
   {
@@ -3331,8 +3331,8 @@
       }
       {
         \token_if_letter:NTF #1
-          { \c__unicode_std_sigma_tl }
-          { \c__unicode_final_sigma_tl }
+          { \c_@@_std_sigma_tl }
+          { \c_@@_final_sigma_tl }
       }
   }
 %    \end{macrocode}
@@ -3380,7 +3380,7 @@
       {
         \tl_if_head_is_N_type:nTF {#2}
           { \@@_change_case_lower_tr_auxii:Nw #2 \q_recursion_stop }
-          { \@@_change_case_output:Vwn \c__unicode_dotless_i_tl }
+          { \@@_change_case_output:Vwn \c_@@_dotless_i_tl }
         #1 #2 \q_recursion_stop
       }
     \cs_new:Npn \@@_change_case_lower_tr_auxii:Nw #1#2 \q_recursion_stop
@@ -3394,7 +3394,7 @@
             \bool_lazy_or:nnTF
               { \token_if_cs_p:N #1 }
               { ! \int_compare_p:nNn { `#1 } = { "0307 } }
-              { \@@_change_case_output:Vwn \c__unicode_dotless_i_tl }
+              { \@@_change_case_output:Vwn \c_@@_dotless_i_tl }
               {
                 \@@_change_case_output:nwn { i }
                 \use_i:nn
@@ -3412,7 +3412,7 @@
     \cs_new:Npn \@@_change_case_lower_tr:Nnw #1#2
       {
         \int_compare:nNnTF { `#1 } = { "0049 }
-          { \@@_change_case_output:Vwn \c__unicode_dotless_i_tl }
+          { \@@_change_case_output:Vwn \c_@@_dotless_i_tl }
           {
             \int_compare:nNnTF { `#1 } = { 196 }
               { \@@_change_case_lower_tr_auxi:Nw #1 {#2} }
@@ -3438,7 +3438,7 @@
 \cs_new:Npn \@@_change_case_upper_tr:Nnw #1#2
   {
     \int_compare:nNnTF { `#1 } = { "0069 }
-      { \@@_change_case_output:Vwn \c__unicode_dotted_I_tl }
+      { \@@_change_case_output:Vwn \c_@@_dotted_I_tl }
       {#2}
   }
 %    \end{macrocode}
@@ -3476,7 +3476,7 @@
 \cs_new:Npn \@@_change_case_lower_lt:Nnw #1
   {
     \exp_args:Nf \@@_change_case_lower_lt:nNnw
-      { \str_case:nVF #1 \c__unicode_accents_lt_tl \exp_stop_f: }
+      { \str_case:nVF #1 \c_@@_accents_lt_tl \exp_stop_f: }
       #1
   }
 \cs_new:Npn \@@_change_case_lower_lt:nNnw #1#2
@@ -3489,7 +3489,7 @@
               {
                 { "0049 } i
                 { "004A } j
-                { "012E } \c__unicode_i_ogonek_tl
+                { "012E } \c_@@_i_ogonek_tl
               }
               \exp_stop_f:
           }
@@ -3536,7 +3536,7 @@
                 { \int_compare_p:nNn { `#2 } = { "0303 } }
               }
           }
-          { \@@_change_case_output:Vwn \c__unicode_dot_above_tl }
+          { \@@_change_case_output:Vwn \c_@@_dot_above_tl }
         #1 #2#3 \q_recursion_stop
       }
   }
@@ -3553,7 +3553,7 @@
           {
             { "0069 } I
             { "006A } J
-            { "012F } \c__unicode_I_ogonek_tl
+            { "012F } \c_@@_I_ogonek_tl
           }
           \exp_stop_f:
       }
@@ -3606,7 +3606,7 @@
 \cs_new:cpn { @@_change_case_upper_de-alt:Nnw } #1#2
   {
     \int_compare:nNnTF { `#1 } = { 223 }
-      { \@@_change_case_output:Vwn \c__unicode_upper_Eszett_tl }
+      { \@@_change_case_output:Vwn \c_@@_upper_Eszett_tl }
       {#2}
   }
 %    \end{macrocode}
@@ -3672,11 +3672,11 @@
 %
 % \begin{variable}
 %   {
-%     \c__unicode_std_sigma_tl    ,
-%     \c__unicode_final_sigma_tl  ,
-%     \c__unicode_accents_lt_tl   ,
-%     \c__unicode_dot_above_tl    ,
-%     \c__unicode_upper_Eszett_tl
+%     \c_@@_std_sigma_tl    ,
+%     \c_@@_final_sigma_tl  ,
+%     \c_@@_accents_lt_tl   ,
+%     \c_@@_dot_above_tl    ,
+%     \c_@@_upper_Eszett_tl
 %   }
 %   The above needs various special token lists containg pre-formed characters.
 %   This set are only available in Unicode engines, with no-op definitions
@@ -3684,9 +3684,9 @@
 %    \begin{macrocode}
 \cs_if_exist:NTF \utex_char:D
   {
-    \tl_const:Nx \c__unicode_std_sigma_tl    { \utex_char:D "03C3 ~ }
-    \tl_const:Nx \c__unicode_final_sigma_tl  { \utex_char:D "03C2 ~ }
-    \tl_const:Nx \c__unicode_accents_lt_tl
+    \tl_const:Nx \c_@@_std_sigma_tl    { \utex_char:D "03C3 ~ }
+    \tl_const:Nx \c_@@_final_sigma_tl  { \utex_char:D "03C2 ~ }
+    \tl_const:Nx \c_@@_accents_lt_tl
       {
         \utex_char:D "00CC ~
           { \utex_char:D "0069 ~ \utex_char:D "0307 ~ \utex_char:D "0300 ~ }
@@ -3695,24 +3695,24 @@
         \utex_char:D "0128 ~
           { \utex_char:D "0069 ~ \utex_char:D "0307 ~ \utex_char:D "0303 ~ }
       }
-    \tl_const:Nx \c__unicode_dot_above_tl    { \utex_char:D "0307 ~ }
-    \tl_const:Nx \c__unicode_upper_Eszett_tl { \utex_char:D "1E9E ~ }
+    \tl_const:Nx \c_@@_dot_above_tl    { \utex_char:D "0307 ~ }
+    \tl_const:Nx \c_@@_upper_Eszett_tl { \utex_char:D "1E9E ~ }
   }
   {
-      \tl_const:Nn \c__unicode_std_sigma_tl    { }
-      \tl_const:Nn \c__unicode_final_sigma_tl  { }
-      \tl_const:Nn \c__unicode_accents_lt_tl   { }
-      \tl_const:Nn \c__unicode_dot_above_tl    { }
-      \tl_const:Nn \c__unicode_upper_Eszett_tl { }
+      \tl_const:Nn \c_@@_std_sigma_tl    { }
+      \tl_const:Nn \c_@@_final_sigma_tl  { }
+      \tl_const:Nn \c_@@_accents_lt_tl   { }
+      \tl_const:Nn \c_@@_dot_above_tl    { }
+      \tl_const:Nn \c_@@_upper_Eszett_tl { }
   }
 %    \end{macrocode}
 % \end{variable}
 % \begin{variable}
 %   {
-%     \c__unicode_dotless_i_tl    ,
-%     \c__unicode_dotted_I_tl     ,
-%     \c__unicode_i_ogonek_tl     ,
-%     \c__unicode_I_ogonek_tl     ,
+%     \c_@@_dotless_i_tl    ,
+%     \c_@@_dotted_I_tl     ,
+%     \c_@@_i_ogonek_tl     ,
+%     \c_@@_I_ogonek_tl     ,
 %   }
 %  For cases where there is an $8$-bit option in the |T1| font set up,
 %  a variant is provided in both cases.
@@ -3743,10 +3743,10 @@
           \group_end:
         }
     }
-  \@@_tmp:w \c__unicode_dotless_i_tl { 0131 }
-  \@@_tmp:w \c__unicode_dotted_I_tl  { 0130 }
-  \@@_tmp:w \c__unicode_i_ogonek_tl  { 012F }
-  \@@_tmp:w \c__unicode_I_ogonek_tl  { 012E }  
+  \@@_tmp:w \c_@@_dotless_i_tl { 0131 }
+  \@@_tmp:w \c_@@_dotted_I_tl  { 0130 }
+  \@@_tmp:w \c_@@_i_ogonek_tl  { 012F }
+  \@@_tmp:w \c_@@_I_ogonek_tl  { 012E }  
 \group_end:
 %    \end{macrocode}
 % \end{variable}
@@ -3777,7 +3777,7 @@
         {
           \tl_const:cx
             {
-              c__unicode_lower_
+              c_@@_lower_case_
               \char_generate:nn {#2} { 12 }
               \char_generate:nn {#3} { 12 }
               _tl
@@ -3790,7 +3790,7 @@
             }
           \tl_const:cx
             {
-              c__unicode_upper_
+              c_@@_upper_case_
               \char_generate:nn {#5} { 12 }
               \char_generate:nn {#6} { 12 }
               _tl
@@ -3911,7 +3911,7 @@
               {
                 \tl_const:cx
                   {
-                    c__unicode_ #3 _
+                    c_@@_ #3 _case_
                     \char_generate:nn {##2} { 12 }
                     \char_generate:nn {##3} { 12 }
                     _tl
