Restrict use of 'coding error' text
Really this should only be needed in l3msg: it's for low-level errors.
Moving a few l3keys messages here to stick with that also points out
that they need longer names.

--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -1295,7 +1295,7 @@
       {
          \tl_if_empty:NF \l_@@_property_tl
            {
-             \__kernel_msg_error:nnxx { kernel } { property-unknown }
+             \__kernel_msg_error:nnxx { kernel } { key-property-unknown }
               { \l_@@_property_tl } { \l_keys_path_tl }
            }
       }
@@ -1373,7 +1373,7 @@
           { \use:c { \c_@@_props_root_tl \l_@@_property_tl } }
           {
             \__kernel_msg_error:nnxx { kernel }
-              { property-requires-value } { \l_@@_property_tl }
+              { key-property-requires-value } { \l_@@_property_tl }
               { \l_keys_path_tl }
             }
       }
@@ -1658,7 +1658,7 @@
           }
       }
       {
-        \__kernel_msg_error:nnx { kernel } { property-boolean-values-only }
+        \__kernel_msg_error:nnx { kernel } { key-property-boolean-values-only }
           { .value_ #1 :n }
       }
   }
@@ -2480,15 +2480,6 @@
     The~key~'#1'~only~accepts~predefined~values,~
     and~'#2'~is~not~one~of~these.
   }
-\__kernel_msg_new:nnnn { kernel } { key-no-property }
-  { No~property~given~in~definition~of~key~'#1'. }
-  {
-    \c__msg_coding_error_text_tl
-    Inside~\keys_define:nn  each~key~name~
-    needs~a~property:  \\ \\
-    \iow_indent:n { #1 .<property> } \\ \\
-    LaTeX~did~not~find~a~'.'~to~indicate~the~start~of~a~property.
-  }
 \__kernel_msg_new:nnnn { kernel } { key-unknown }
   { The~key~'#1'~is~unknown~and~is~being~ignored. }
   {
@@ -2500,26 +2491,6 @@
   {
     The~key~'#1'~cannot~be~defined~as~a~choice~as~the~parent~key~'#2'~is~
     itself~a~choice.
-  }
-\__kernel_msg_new:nnnn { kernel } { property-boolean-values-only }
-  { The~property~'#1'~accepts~boolean~values~only. }
-  {
-    \c__msg_coding_error_text_tl
-    The~property~'#1'~only~accepts~the~values~'true'~and~'false'.
-  }
-\__kernel_msg_new:nnnn { kernel } { property-requires-value }
-  { The~property~'#1'~requires~a~value. }
-  {
-    \c__msg_coding_error_text_tl
-    LaTeX~was~asked~to~set~property~'#1'~for~key~'#2'.\\
-    No~value~was~given~for~the~property,~and~one~is~required.
-  }
-\__kernel_msg_new:nnnn { kernel } { property-unknown }
-  { The~key~property~'#1'~is~unknown. }
-  {
-    \c__msg_coding_error_text_tl
-    LaTeX~has~been~asked~to~set~the~property~'#1'~for~key~'#2':~
-    this~property~is~not~defined.
   }
 \__kernel_msg_new:nnnn { kernel } { value-forbidden }
   { The~key~'#1'~does~not~take~a~value. }
