--- a/l3trial/l3bigint/l3bigint.dtx
+++ b/l3trial/l3bigint/l3bigint.dtx
@@ -151,7 +151,7 @@
 %   \begin{syntax}
 %     \cs{bigint_abs:n} \Arg{bigintexpr}
 %   \end{syntax}
-%   Exaluates the \meta{big integer expression} and leaves its absolute
+%   Evaluates the \meta{big integer expression} and leaves its absolute
 %   value in the input stream.
 % \end{function}
 %
